--- a/src/app/bet/bet.component.html
+++ b/src/app/bet/bet.component.html
@@ -1,9 +1,30 @@
-<div>LuckyRoulette Bets</div>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+  integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<div style="background-color: rgb(255, 255, 0);">
+  <div class="input-group mb-3 input-money">
+    <div class="input-group-prepend">
+      <span class="input-group-text">$</span>
+      <span class="input-group-text">0.00</span>
+    </div>
+    <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+  </div>
+  
 <div>
-  <button class="bet-btn-green" click="betGreen()">BET GREEN</button>
+<button class="btn btn-success pattern-btn-green" (click)="betGreen()">BET GREEN</button>
 </div>
 <div>
-  <button class="bet-btn-red" click="betRed()">BET RED</button>
-</div>  
-<router-outlet></router-outlet>
+  <button class="btn btn-danger pattern-btn-red" (click)="betRed()">BET RED</button>
+</div>
+
+
+
+
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+  integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+  integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+</div>
 <router-outlet></router-outlet>
