--- a/src/app/bet/bet.component.html
+++ b/src/app/bet/bet.component.html
@@ -1,5 +1,8 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
   integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <head><script src="https://kit.fontawesome.com/f10cdc4120.js" crossorigin="anonymous"></script></head>
 
   <nav class="pattern-nav navbar navbar-light bg-light">
       <span class="pattern-amount-money">{{amount}}</span>
@@ -7,6 +10,10 @@
   </nav>
 
   <span class="actions navbar navbar-light bg-light">
+    <span><i class="fa fa-credit-card-alt" style="font-size: 20px; position: absolute; top: 32px; right: 304px;" aria-hidden="true"></i></span>
+    <a style="font-weight: 700" href="">DEPOSIT</a>
+    <span><i style="font-size: 28px; position: absolute; top: 28px; right: 127px;" class="fa fa-money" aria-hidden="true"></i></span>
+    <a style="font-weight: 700;" href="">WITHDRAW</a>
   </span>
 
   <span class="pattern-border-nav navbar navbar-light bg-light">
