--- a/src/app/bet/bet.component.scss
+++ b/src/app/bet/bet.component.scss
@@ -87,3 +87,13 @@
     background-color: rgba(0, 0, 0, 0);
 }
 
+.refresh {
+    position: absolute;
+    right: 63%;
+    top: 42%;
+    font-size: 27px;
+    border-style: none;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0);
+}
+
